--- a/src/Linguagens.html
+++ b/src/Linguagens.html
@@ -17,7 +17,7 @@
 
             <div class="nav">
                 <a href="index.html">Home</a>
-                <a href="Linguagens.html">Linguagens</a>
+                <a href="404.html">Linguagens</a>
                 <a href="#Contato">Contato</a>
 
             </div>
@@ -26,23 +26,27 @@
 
 
     <main>
+        <div class="content"></div>
 
-        <div class="content-404">
+        <div class="search">
+            <input type="search" placeholder="Seu Texto Aqui" alt="" id="search">
+        </div>
+        
 
-            <h1> <img src="midia/assets/favicon-32x32.png" alt=""> | 404</h1>
+        <div class="content-text">
 
-            <p>Página não encontrada</p>
-
-            <br>
-
-            <a href="index.html" target="_self">Retornar à tela inicial</a>
+            <div class="clabox-teste">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, enim? Earum maiores inventore
+                    explicabo distinctio molestias odit obcaecati accusantium tempore esse magni iusto, illum quas
+                    placeat corporis excepturi dolorum libero.</p>
+            </div>
 
         </div>
 
-        <!--  <input type="search" placeholder="Teste de pesquisa">
-                <button></button>
-        
-        -->
+        <div class="content-img">
+
+        </div>
+
     </main>
 
 
